fixed h1 text alignment in 404 page

--- a/sass/components/content/_404.scss
+++ b/sass/components/content/_404.scss
@@ -13,6 +13,7 @@ body section.error-404.not-found {
         color: $brand_secondary;
         font-size: 4rem;
         margin: 0.5rem;
+        text-align: center;
     }
 
     p {
